<resources>
    <string name="app_name">A1MS</string>
    <string name="welcome_to">Welcome to</string>
    <string name="a1ms_msg_shopping">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;ALL
        IN ONE \n MESSAGING \u0026 SHOPPING
    </string>
    <string name="hint_enter_email">Enter your email address</string>
    <string name="hint_create_password">Enter or create password</string>
    <string name="login_register">Login / Register</string>
    <string name="register">Register</string>
    <string name="login_already_a1ms_user">Already an A1MS user - Synchronise this new device
    </string>
    <string name="login_enjoy_great_deals">Enjoy great retail deals based on what you chat about
    </string>
    <string name="login_invite_your_friends">Invite your friends to share and enjoy A1MS with you
    </string>
    <string name="login_forgot_password">
        <u>Forgot password</u>
    </string>
    <string name="no_contacts">No contacts fetched..</string>
    <string name="permission_contact_denied">Either there are no contacts or permission to fetch
        contacts was denied. Enable contacts permission from settings application.
    </string>


    <!-- MENU -->
    <string name="menu_my_avatar">My Avatar</string>
    <string name="menu_message_notification">Message Notification</string>
    <string name="menu_deals_notification">Deals Notification</string>
    <string name="menu_my_deals_shop">My Deals \u0026 Offers</string>
    <string name="menu_language_libraries">Language Libraries</string>
    <string name="hint_add_contacts_groups">Add Contacts \u0026 Groups</string>
    <string name="menu_select_all">Select All</string>
    <string name="hint_show_groups">Show Groups</string>
    <string name="hint_group_details">Group Info</string>
    <string name="hint_show_contacts">Show Contacts</string>
    <string name="hint_add_contacts">Add Contact</string>
    <string name="hint_delete">Delete Selected</string>
    <string name="hint_next">Next</string>
    <string name="hint_change_name_group">Change group name</string>
    <string name="hint_add_user_groups">Add users</string>
    <string name="hint_create_group">Create Group</string>
    <string name="hint_view_profile">View Profile</string>
    <string name="hint_groupname">Enter your group name</string>
    <string name="hint_enter_phone">--- --- --- --- --- --- --- --- ---</string>
    <string name="hint_enter_phone_activation_code_will_be_send">Please confirm your country code
        and phone number. The activation code will be send to this number. Hence, please make sure
        the number can receive messages.
    </string>
    <string name="hint_enter_phone_activation_code_wait">Activation code is send as SMS to the phone
        number %s
    </string>
    <string name="hint_input_activation_code">Activation code</string>

    <!-- Toolbar title -->
    <string name="toolbar_group_info">Group Info</string>

    <!-- dialogs -->
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_exit_group">Exit Group</string>

    <!-- Permissions -->
    <string name="permission_title">Permission Request</string>
    <string name="permission_denied_message">All features of A1MS will not function without
        requested permissions granted. Please provide access to all requested permissions.
    </string>
    <string name="permission_receive_sms">A1MS needs permission to access your SMS to pre-populate
        the activation code.
    </string>
    <string name="permission_camera">To capture photos, provide A1MS access to your camera and external storage.</string>

    <!-- Title -->
    <string name="title_contacts_group">Contacts \u0026 Groups</string>

    <!-- Invite -->
    <string name="a1ms_message_invite">Try out A1MS messaging app. To download visit
        https://play.google.com/store/apps/details?id=uk.com.a1ms
    </string>
    <string name="invite_sent">Invite Sent</string>
    <string name="invite_sent_error">Something went wrong while inviting. Please try again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="intro_one_details_heading">All-in-One\nMessaging \u0026 Shopping</string>
    <string name="intro_one_details">Ad-Free Secret Messaging \n\n Personalised Deals \u0026 Offers \n\n Echo Mate Practice Companion \n\n FREE Weekly \u00A310 Cash Price Draw \n\n\n\n No Fees or Subscriptions</string>

    <string name="intro_two_details_heading">Highest Levels of Security</string>
    <string name="intro_two_details">As Well As \n\n User Controlled Message Encryption\n\nUser Enhanced Privacy \u0026 Secrecy</string>

    <string name="intro_three_details_heading">Obscure \u0026 Confuse Prying Eyes</string>
    <string name="intro_three_details">Creating Secret Anonyms as You Type\n\nthat only you and your\n\n Recipients can Translate \u0026 Understand \n\n\n Simply Capitalize 1st Letter of Sequential Words\n\n or Delimit Text with \'..\' (dot dot)</string>

    <string name="intro_four_details_heading">Personalized Deals \u0026 Offers</string>
    <string name="intro_four_details">Based on Key Words in Your Chats \n\n We Do Not Share Any Other Information\n\nYou Remain Anonymous with Our Retailers</string>
    <string name="checkbox_intro_four_details">Opt-in to get Retailer Deals \u0026 Offers</string>

    <string name="intro_five_details_heading">Familiarize Using Echo Mate</string>
    <string name="intro_five_details">While You Wait for Your Friends to Join\n\n Practice Creating Secret Acronyms\n\n Generate Personalized Deals \u0026 Offers\n\n\n Echo Mate is an A1MS Contact</string>

    <string name="intro_six_details_heading">FREE\nWeekly \u00A310 Cash Prize Draw</string>
    <string name="intro_six_details">Monday 12pm UK Time\n <font size="13">(Minimum 1000 Users) </font> \n\n\nPrizes Paid via PayPal\n\n Increase Your Chances to Win via Invites\n\n If an Invitee Wins, So Do You.!!\n <font size="13"> (First Invite First Serve Basis via A1MS)</font>\n\n Prizes Rollover if Unclaimed </string>
    <string name="checkbox_intro_six_enrol_details">Enroll for the FREE Weekly Prize Draw</string>
    <string name="checkbox_intro_six_details">Invite My Contacts to Join A1MS</string>


    <string name="hint_register">Register</string>

    <!-- Groups -->
    <string name="max_group_size_reached">You have reached the maximum members that can be added for a group.</string>
    <string name="exit_group">Exit Group</string>
    <string name="group_info_current_members">Current Members</string>
    <string name="group_info_add_members">Add Members</string>
    <string name="exit_group_message">Do you really want to exit this group?</string>
    <string name="group_not_member">You can\u2019t send messages to this group as you\u2019re no longer a member.</string>
    <string name="group_name">Group name</string>
    <string name="renaming_group">Renaming group..</string>
    <string name="adding_members">Adding members..</string>

    <!-- Permissions -->
    <string name="message_permission">uk.com.a1ms.message.permission</string>
    <string name="invites">Invites</string>
    <string name="a1ms_tab">A1MS</string>
    <string name="new_message">New message</string>
    <string name="invalid_phone_number">Phone number not valid. Please check your number.</string>
    <string name="activation_error">Activation error</string>
    <string name="activation_error_internet_connectivity">Activation error. Please check your
        internet connectivity and try again
    </string>


</resources>
