<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="100"
        android:title="@string/abc_search_hint"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/contact"
        android:orderInCategory="100"
        android:title="@string/hint_add_contacts_groups"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_my_avatar"
        android:orderInCategory="97"
        android:title="@string/menu_my_avatar"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/action_message_notification"
        android:orderInCategory="98"
        android:title="@string/menu_message_notification"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deals_notification"
        android:orderInCategory="99"
        android:title="@string/menu_deals_notification"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_my_deals_offers_shop"
        android:orderInCategory="101"
        android:title="@string/menu_my_deals_shop"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_language_libraries"
        android:orderInCategory="102"
        android:title="@string/menu_language_libraries"
        app:showAsAction="never" />

</menu>
