<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/action_select_all"
        android:checkable="true"
        android:checked="false"
        android:icon="@android:drawable/checkbox_off_background"
        android:title="@string/menu_select_all"
        android:actionViewClass="android.widget.CheckBox"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="100"
        android:title="@string/abc_search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_contacts_groups"
        android:icon="@drawable/contacts_group"
        android:orderInCategory="100"
        android:title="@string/hint_show_groups"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_contact"
        android:icon="@android:drawable/stat_sys_phone_call"
        android:orderInCategory="100"
        android:title="@string/hint_add_contacts"
        app:showAsAction="always" />

</menu>
