<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="3">


    <ImageView android:layout_width="300dp"
               android:layout_height="200dp"
               android:layout_gravity="center"
               android:layout_marginTop="35dp"
               android:background="@drawable/intro_page_4"
               android:scaleType="fitXY"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
              android:gravity="center"
              android:text="@string/intro_four_details_heading"
              android:textColor="@android:color/black"
              android:textSize="25dp"
              android:textStyle="bold"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="30dp"
              android:gravity="center"
              android:text="@string/intro_four_details"
              android:textSize="15dp"
    />

    <CheckBox android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
              android:checked="true"
              android:gravity="center"
              android:text="@string/checkbox_intro_four_details"
    />

</LinearLayout>
